rgw: properly handle initial slashes in SLO's segment path.

Fixes: http://tracker.ceph.com/issues/16015
Signed-off-by: Radoslaw Zarzynski <rzarzynski@mirantis.com>